--- a/php/apache/conf/mailhog.conf
+++ b/php/apache/conf/mailhog.conf
@@ -1,5 +1,5 @@
+# Mailhog config
 Redirect permanent /mailhog /mailhog/
-
 <Location /mailhog/>
     ProxyPass http://mail:8025/
     ProxyPassReverse http://mail:8025/
