--- a/php/docker.env
+++ b/php/docker.env
@@ -1,5 +1,5 @@
 # Set URL
-APP_URL=http://localhost:4100
+APP_URL=http://localhost:13370
 
 # Set database and host to Docker internal
 DB_HOST=database
@@ -12,8 +12,8 @@ MAIL_PORT=1025
 # Use ext-redis instead of predis
 REDIS_CLIENT=phpredis
 
-# Seed ignition
-IGNITION_REMOTE_SITES_PATH=/var/www/statamic/
+# Provide remote path mapping
+IGNITION_REMOTE_SITES_PATH=/var/www/
 
 # Flag for Apache
 DOCKER_LOCAL=yes
